# ranked.vote

./: .gitattributes  .gitignore  README.md  generate-images.sh  package-lock.json  package.json  svelte.config.js  vite.config.js
report_pipeline/: .gitignore  ARCHIVE-AUDIT-REPORT.md  Cargo.toml  README.md  cleanup-zips.sh  compress-to-archives.sh  extract-and-compress-zips.sh  reports.sqlite3
report_pipeline/election-metadata/us/: ak.json  mn.json
report_pipeline/election-metadata/us/ca/: alameda.json  sfo.json
report_pipeline/election-metadata/us/mn/: minnetonka.json
report_pipeline/election-metadata/us/ny/: nyc.json
report_pipeline/election-metadata/us/ut/: salt-lake-county.json
report_pipeline/election-metadata/us/wa/: pierce.json
report_pipeline/reports/: index.json
report_pipeline/scripts/: convert_csv_to_json.py
report_pipeline/src/: main.rs  report.rs
report_pipeline/src/commands/: extract.rs  mod.rs  report.rs  sync.rs
report_pipeline/src/formats/: mod.rs
report_pipeline/src/formats/common/: candidate_map.rs
report_pipeline/src/formats/dominion_rcr/: parser.rs
report_pipeline/src/formats/nist_sp_1500/: ballot.rs  csv_parser.rs  mod.rs  model.rs  path.rs
report_pipeline/src/formats/preflib/: mod.rs
report_pipeline/src/formats/us_ca_sfo/: mod.rs
report_pipeline/src/formats/us_me/: mod.rs
report_pipeline/src/formats/us_mn_mpls/: mod.rs
report_pipeline/src/model/: election.rs  metadata.rs  report.rs
report_pipeline/src/normalizers/: mod.rs  nyc.rs
report_pipeline/src/tabulator/: mod.rs
report_pipeline/src/util/: io.rs
(+291 files in other folders)
