[package]
name = "ranked-vote"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.85"
colored = "3.0"
sha-1 = "0.10"
itertools = "0.14"
flate2 = "1.0.16"
zip = "6.0"
regex = "1"
lazy_static = "1.4.0"
nom = "8.0"
rayon = "1.8"
calamine = "0.32"
csv = "1.4"
